--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "primeflex": "^4.0.0",
         "primeicons": "^6.0.1",
         "primevue": "^3.49.1",
         "vue": "^3.4.15"
@@ -16,7 +17,7 @@
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.0.3",
         "typescript": "^5.3.3",
-        "vite": "^5.0.11",
-        "vue-tsc": "^1.8.27"
+        "vite": "^7.3.1",
+        "vue-tsc": "^3.2.4"
     }
 }
