update versions, prod build

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,16 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@primevue/themes": "^4.5.4",
         "primeflex": "^4.0.0",
         "primeicons": "^6.0.1",
-        "primevue": "^3.49.1",
-        "vue": "^3.4.15"
+        "primevue": "^4.5.4",
+        "vue": "^3.5.28"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^5.0.3",
-        "typescript": "^5.3.3",
-        "vite": "^7.3.1",
-        "vue-tsc": "^3.2.4"
+        "@vitejs/plugin-vue": "^6.0.4",
+        "typescript": "^5.9.3",
+        "vite": "^6.4.1",
+        "vue-tsc": "^3.2.5"
     }
 }
