--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - ./frontend/src:/app/src
     environment:
       - VITE_API_URL=http://localhost:8000/api
+      - VITE_MEDIA_TYPES=tv show,movies
 
 volumes:
   job-data:
