--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,9 +12,23 @@ dependencies = [
     "sse-starlette>=2.0.0",
 ]
 
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0",
+    "pytest-asyncio>=0.23",
+    "httpx>=0.27",
+    "pytest-cov>=5.0",
+]
+
 [tool.flit.module]
 name = "app"
 
 [build-system]
 requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
+
+[tool.pytest.ini_options]
+testpaths = ["src/tests"]
+asyncio_mode = "auto"
+addopts = "--tb=short"
+pythonpath = ["src"]
