--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,10 @@
     "scripts": {
         "dev": "vite",
         "build": "vue-tsc -b && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "test:coverage": "vitest run --coverage"
     },
     "dependencies": {
         "@primevue/themes": "^4.5.4",
@@ -17,8 +20,12 @@
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^6.0.4",
+        "@vitest/coverage-v8": "^4.0.18",
+        "@vue/test-utils": "^2.4.6",
+        "jsdom": "^28.1.0",
         "typescript": "^5.9.3",
         "vite": "^6.4.1",
+        "vitest": "^4.0.18",
         "vue-tsc": "^3.2.5"
     }
 }
