--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
 
 jobs:
-  test:
+  all:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -36,14 +36,20 @@ jobs:
           cd worker
           python -m pytest --cov=worker --cov-report=html --cov-report=term
 
-      - name: Upload backend coverage report
-        uses: actions/upload-artifact@v4
+      - uses: actions/setup-node@v4
         with:
-          name: backend-coverage
-          path: backend/coverage.xml
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: frontend/package-lock.json
 
-      - name: Upload worker coverage report
-        uses: actions/upload-artifact@v4
-        with:
-          name: worker-coverage
-          path: worker/coverage.xml
+      - name: Install frontend dependencies
+        run: npm install
+        working-directory: frontend
+
+      - name: Lint (eslint)
+        run: npm run lint
+        working-directory: frontend
+
+      - name: Run frontend tests
+        run: npm test
+        working-directory: frontend
